# rldx

./: .gitignore  Cargo.toml  README.md  agents.md  config.example.toml  current-config.toml  flake.nix  merge-strategy.md  tasks.md
rldx/: Cargo.toml  agents.md  config.example.toml
rldx/src/: config.rs  db.rs  indexer.rs  main.rs  photo.rs  search.rs  vcard_io.rs  vdir.rs
rldx/src/import/: google.rs
rldx/src/ui/: app.rs  draw.rs  edit.rs  mod.rs  panes.rs
src/: config.rs  crypto.rs  db.rs  indexer.rs  main.rs  search.rs  sync.rs  translit.rs  vcard_io.rs  vdir.rs
src/import/: google.rs  maildir.rs  mod.rs  simhash_index.rs
src/remote/: carddav.rs  mod.rs
src/ui/: app.rs  draw.rs  edit.rs  mod.rs  panes.rs
tests/: integration.rs  test_contacts.vcf
tests/test_maildir/new/: 1765417716.3399f24d53dc4506b9412ed8b826d8eb.mail  1765485516.c4068fcc5c1a41be8520aa9c776d6798.mail  1765509756.ddcc4152fc6e49f6a7c535f0c6e8ce77.mail  1765550436.952275eee27e415d94dea80bef389974.mail  1765565676.7960885ce2f041e88864e02f23dcd074.mail  1765582296.b717a17485ca49c39b55706777ec642c.mail  1765628676.cfe9d307bcdc4367816f846ef6026a24.mail  1765687116.bcfcb4a4bc9d46fcb5cf33d4f1dae412.mail  1765736736.501d88f794a14c2d8868eda7c6000fdf.mail  1765809816.153530095565465ba919c4875b82367d.mail  1765837836.d660f38a9ce04efd85c673838ab97842.mail  1766156676.ad8462f283fe40ccb5aabccc434722ac.mail  1766216916.0b85672f0e3a4aef88cb316eab4672c2.mail  1766217996.ff88c3381474466da5180d91dcbaa3a0.mail  1766294016.616d39176b4044fea1ab7e95200ead2e.mail  1766298336.816b9cc8e42d49a58699e95ae0bf8aa7.mail  1766335176.16f20ac832d145869794b1f9f191847c.mail  1766340996.2c33985988de49dfaa3d701edd37a6ce.mail  1766352036.45995ef3b7364a07908a5460ef008018.mail  1766359956.9b0cc114df064ed396885076f5380e1f.mail  1766530236.19fdcec2e81b4e6084c022a92a15845e.mail  1766564076.223794e6e8cb494a9b1300450cc9ed6c.mail  1766588676.cff439c00c4e457bb26e7f1f63ca8ec9.mail  1766619156.e4a9f163d45b4b2f936281d488c49a9e.mail  1766643096.933616d8a03a4f2da00cc9c2d7c1fb18.mail  1766703696.7d47fe6e45714e228cca88e0f1385d04.mail  1766707956.6123507f6a284f6a9a941b8e00da782e.mail  1766766816.648f46f1f4b44f939d8d90b91f071065.mail  1766788956.c29a7304e55c4bb8beee6042f09328c8.mail  1766842236.3addfc6c3c134712bede74c375d6f7c8.mail  1766850636.ddc4f7d0639a4e5d849ea236e207e5b8.mail  1766949936.b3336962c45f4c09a210358d85424414.mail  1767005136.a6bd3380c835450bae4a4f492f239857.mail  1767052356.5f066099ced94cb697ae0f88ca0200d2.mail  1767079056.9fab464c677344ae9c0e04a1f61aa310.mail  1767098496.f75c02d465c9490e8ae957dc9faa3411.mail  1767138276.b560e4f5d2a64e5a857ae03d19697b95.mail  (+13 more)
