[package]
name = "rldx"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
directories = "5.0.1"
image = { version = "0.24.9", default-features = false, features = ["png", "jpeg"] }
ratatui = "0.28.1"
ratatui-image = "0.7"
tui-input = "0.8"
tui-widgets = "0.3"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "rustls-tls", "json"] }
rusqlite = { version = "0.38", features = ["bundled-sqlcipher"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha1 = "0.10.6"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["macros", "formatting", "parsing"] }
toml = "0.8.14"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
vcard4 = "0.7.2"
rlibphonenumber = "0.2.3"
home = "0.5.5"
deunicode = "1.6"
unicode-script = "0.5"
qrcode = "0.14"
maildir = "0.6"
mailparse = "0.14"
strsim = "0.11"
rayon = "1.10"
indicatif = "0.17"
simhash = "0.2"
bktree = "1.0"
age = { version = "0.11", default-features = false, features = ["armor"] }
hkdf = "0.12"
sha2 = "0.10"
orion = "0.17"

# CardDAV sync dependencies
libdav = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hyper = "1"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "tls12", "webpki-tokio"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
tower-http = { version = "0.6", features = ["auth"] }
http = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
