[package]
name = "rldx"
version = "0.1.0"
edition = "2021"

[features]
default = []
dav = ["libdav"]

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
directories = "5.0.1"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }
libdav = { version = "0.9.6", optional = true }
ratatui = "0.26.1"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "rustls-tls", "json"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha1 = "0.10.6"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["macros", "formatting", "parsing"] }
toml = "0.8.14"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
vcard4 = "0.7.2"
rlibphonenumber = "0.2.3"
home = "0.5.5"
